clean html file

--- a/index.html
+++ b/index.html
@@ -4,32 +4,31 @@
         <title>Aminatou's Portfolio</title>
         <meta charset="utf-8">
         <meta name="author" content="Aminatou BARRY">
-        <meta name="description" content="Portfolio web de Aminatou">
+        <meta name="description" content="Portfolio web of Aminatou">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- ===================bootstrap css ===================== -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- ===================bootstrap icons ===================== -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+        <!-- ===================swiper css ===================== -->
         <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!--favicon -->
-        <!--css -->
+        <!-- =================== fontawesome ===================== -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
-
+        <!-- =================== my custom css ===================== -->
         <link rel="stylesheet" href="css/amina.css">
 
     </head>
     <body>
-    <!--    Bare de navigation-->
+    <!-- =================== navigation bare ===================== -->
     <div class="w-container">
         <nav class="navbar  navbar-expand-md navbar-light w-nav ">
             <div class="container container-fluid ">
                 <button id="burg-icon" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="navbar-toggler-icon"  ></i>
                 </button>
-<!--                <button onclick="closeMenu()" id="close-icon"  class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">-->
-<!--                    <i class="fa-solid fa-xmark" id="close"> </i>-->
-
-<!--                </button>-->
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <a class="navbar-brand w-nav-brand" href="#">
                         <img src="assets/img/logo.png" alt="logo" class="image">
@@ -57,17 +56,15 @@
 
     </div>
 
-    <!-- heros section -->
+    <!-- =================== hero section ===================== -->
     <section class="hero align-items-stretch" id="hero">
         <div class="container">
-
         <div class="flexbox hero-flexbox">
-
             <div class="left-block">
                 <div class="information">
                     <h1 class="text">Hello! <br> Welcome here &#x1F642;</h1>
                     <h2 class="text">My name is <em><strong style="font-size: 1.3rem" > Aminatou BARRY</strong></em></h2>
-                    <div  class="text-content" style=" ">
+                    <div  class="text-content">
                         <div class="normal-title text">I am a</div>
                         <div class="typed change-text" ></div>
                     </div>
@@ -85,8 +82,7 @@
         </div>
 
     </section>
-
-    <!-- a propos de moi section -->
+    <!-- =================== about me section ===================== -->
     <section id="about" class="section about-me space-b-section">
         <div class="container center">
             <h1 class="section-title"> Who Am I?</h1>
@@ -110,38 +106,29 @@
                         <a href="mailto:aminatou.barry97@gmail.com" class="  btn_about">Email me</a></p>
                 </div>
             </div>
-
-
-
         </div>
     </section>
 
-    <!--skills section-->
+    <!-- =================== skills section ===================== -->
     <div class="space-b-section">
     <section id="skills" class="skills section section-bg ">
         <div class="container container2">
-
             <h1 class="section-title">Skills</h1>
             <p class="paragraph">My skills continue to grow, I keep learning on platform like Udemy, ORSYS, OpenClassRoom.</p>
-
             <div class="row skills-content">
-
                 <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up">
-
                     <div class="progress">
                         <span class="skill">HTML <i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                         </div>
                     </div>
-
                     <div class="progress">
                         <span class="skill">CSS <i class="val">50%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50" style="width: 50%;"></div>
                         </div>
                     </div>
-
                     <div class="progress">
                         <span class="skill">JavaScript <i class="val">75%</i></span>
                         <div class="progress-bar-wrap">
@@ -155,23 +142,19 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-
                     <div class="progress">
                         <span class="skill">PHP/Synfony <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                         </div>
                     </div>
-
                     <div class="progress">
                         <span class="skill">JAVA /Spring Boot <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80" style="width: 80%;"></div>
                         </div>
                     </div>
-
                     <div class="progress">
                         <span class="skill">Mysql/MongoDB <i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
@@ -184,15 +167,12 @@
                             <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="50" style="width: 35%;"></div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
     </section>
 
-        <!-- ===========       Certification =========-->
+        <!-- ================ Certifications =================-->
         <div class="space-b-section container">
         <h1 class="section-title">Certifications</h1>
         <div class="container-swp">
@@ -232,9 +212,7 @@
                                 <h3 class="card-name">Devops : HandBook</h3>
                                 <p class="card-description">Devops initiation</p>
                                 <a href="assets/img/certifs/devops1.jpg" class="card-button"> view more</a>
-
                             </div>
-
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
@@ -245,9 +223,7 @@
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD with Git, Jenkins, Ansible, Kubernetes </p>
                                 <a href="assets/img/certifs/devops2.jpg" class="card-button"> view more</a>
-
                             </div>
-
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
@@ -258,9 +234,7 @@
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD with Jenkins, Maven, Gradle </p>
                                 <a href="assets/img/certifs/devops3.jpg" class="card-button"> view more</a>
-
                             </div>
-
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
@@ -271,27 +245,24 @@
                                 <h3 class="card-name">Devops : practice with AWS</h3>
                                 <p class="card-description">Practice Devops CI/CD with AWS, Jenkins, Docker, Ansible Gradle </p>
                                 <a href="assets/img/certifs/devops4_aws.jpg" class="card-button"> view more</a>
-
                             </div>
-
                         </article>
-
                     </div>
                 </div>
-                <!-- If we need navigation buttons -->
+                <!-- navigation buttons -->
                 <div class="swiper-button-prev">
                     <i class="ri-arrow-left-s-line"></i>
                 </div>
                 <div class="swiper-button-next">
                     <i class="ri-arrow-right-s-line"></i>
                 </div>
-                <!-- If we need pagination -->
+                <!-- pagination -->
                 <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
     </div>
-    <!-- Resume section -->
+    <!-- =================== Resume section ===================== -->
     <section id="resume" class="space-b-section section resume">
         <div class="container container2">
 
@@ -348,12 +319,10 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <!-- portfolio -->
-
+    <!-- =================== portfolio section ===================== -->
     <div class="space-b-section">
          <section id="portfolio" class="portfolio section section-bg">
             <div class="container">
@@ -409,7 +378,6 @@
                                         <li class="work-info-list-item">
                                             This Project is a property of CNAV Company. It is free to use.
                                         </li>
-
                                         <li class="work-info-list-item">
                                             Workflow :
                                             <ol>
@@ -459,7 +427,6 @@
                                         <li class="work-info-list-item">
                                             This Project is a property of CNAV Company. It is free to use.
                                         </li>
-
                                         <li class="work-info-list-item">
                                             Workflow :
                                             <ol>
@@ -546,13 +513,11 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-<!--                <a href="#" class="more-btn">See more</a>-->
             </div>
          </section>
     </div>
-    <!-- Resume section -->
+    <!-- =================== contact section ===================== -->
     <section id="contact" class="space-b-section section resume">
         <div class="contact-wrap">
             <div class="contact-in">
@@ -563,43 +528,33 @@
                 <p>aminatou.barry97@gmail.com</p>
                 <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h2>
                 <p>11 Rue Arsène Bourgeois, Orléans</p>
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                </ul>
             </div>
-
             <div class="contact-in">
-
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.0539944141774!2d1.9247353999999999!3d47.9159927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e4fb462eda3c2f%3A0xee92614ce72c3042!2s11%20Rue%20Ars%C3%A8ne%20Bourgeois%2C%2045000%20Orl%C3%A9ans!5e0!3m2!1sen!2sfr!4v1707816671874!5m2!1sen!2sfr" width="100%" height="auto"
                         style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
     </section>
 
-
-    <!-- ======= Footer ======= -->
+    <!-- ======= Footer section ======= -->
     <footer class="footer" id="footer">
         <div class="container">
             <div class="copyright text">
                 &#169 Copyright Aminatou BARRY. All right reserved
             </div>
-
         </div>
         <a href="#"  class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-    </footer><!-- End  Footer -->
+    </footer>
 
-    <!-- Vendor JS Files -->
+    <!--  Typed js -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <!--  bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Swiper JS -->
     <script src="js/swiper-bundle.min.js"></script>
 
-
-    <!-- Template Main JS File -->
+    <!--  custom JS File -->
     <script src="js/main.js"></script>
     </body>
 </html>
