--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                        and to eat a good meal at a restaurant with family or friends.
 
                    </p>
-                    <img class="" src="assets/img/hobby.png" alt="img_about"/>
+<!--                    <img class="" src="assets/img/hobby.png" alt="img_about"/>-->
                 </div>
                 <div class="col-12 col-md-3">
                     <img class="img_about" src="assets/img/about.jpg" alt="img_about"/>
                     <p class="paragraph ">Today I am <span class="change-text">Dev Lead at CNAV.</span> <br>
-                        I work on two project <b>DSN</b> and <b>PASRAU</b>, my delivery are available <a href="https://www.net-entreprises.fr/">here</a>
+                        I work on two projects <b>DSN</b> and <b>PASRAU</b>, my delivery are available <a href="https://www.net-entreprises.fr/">here</a>
                         <a href="mailto:aminatou.barry97@gmail.com" class="  btn_about">Email me</a></p>
                 </div>
             </div>
@@ -292,7 +292,7 @@
                         <h5>2021 - Present</h5>
                         <p><em>CNAV, Paris </em></p>
                         <ul>
-                            <li>I am in charge of all project pipeline, from translating functional specifications to delivery.</li>
+                            <li>I am in charge of all project pipelines, from translating functional specifications to delivery.</li>
                             <li>I lead meeting with QA Team and scheduled delivery with GIP-MDS IT management team. </li>
                         </ul>
                     </div>
@@ -306,7 +306,7 @@
                                 The purpose of this project is to put forward the performances of UINC services through a website.
                             I worked with network service, management service,.. </li>
                             <li>
-                                For this mission, I Extract data from Orange BIG DATA, and calculate many KPI's (key performance indicator) for each service.
+                                For this mission, I Extract data from Orange BIG DATA by using JDBC, and calculate many KPI's (key performance indicator) for each service.
                                 I present those indicators in the site with graphics.
                             </li>
                         </ul>
@@ -382,7 +382,7 @@
                                             Workflow :
                                             <ol>
                                                 <li>
-                                                    Translating functional specs to technical and send it to GIP-MDS.
+                                                    Translating functional specs to technical and send a technical book to GIP-MDS.
                                                 </li>
                                                 <li>
                                                     Coding functionalities and test them.
@@ -431,7 +431,7 @@
                                             Workflow :
                                             <ol>
                                                 <li>
-                                                    Translating functional specs to technical and send it to GIP-MDS.
+                                                    Translating functional specs to technical and send a technical book to GIP-MDS.
                                                 </li>
                                                 <li>
                                                     Coding functionalities and test them.
