--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 The purpose of this project is to put forward the performances of UINC services through a website.
                             I worked with network service, management service,.. </li>
                             <li>
-                                For this mission, I Extract data from Orange BIG DATA by using JDBC, and calculate many KPI's (key performance indicator) for each service.
+                                For this mission, I Extract data from Orange BIG DATA by using JDBC python script, and calculate many KPI's (key performance indicator) for each service.
                                 I present those indicators in the site with graphics.
                             </li>
                         </ul>
