add azure ad b2c to portfolio

--- a/index.html
+++ b/index.html
@@ -326,9 +326,34 @@
     <div class="space-b-section">
          <section id="portfolio" class="portfolio section section-bg">
             <div class="container">
-                <h1 class="section-title">Portfolio</h1>
+                <h1 class="section-title">Portfolio and Use Case</h1>
 
                 <div class="work-list" >
+                    <div class="work filter-app">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Authent with Azure AD B2C, Angular and Spring Boot</h3>
+                            <p>In this use case, I secured an Authentication with spring security and Azure AD B2C tenant. </p>
+                            <p>From angular welcome page, user can redirect for registration or authentication to Azure user flows pages.
+                                After authentication, user will return to my angular welcome page with an authent status.</p>
+
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Azure AD B2C with Spring and Angular</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            Front : Angular 15.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot service with Azure AD B2C config.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
