add azure ad b2c to portfolio

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                     <h2 class="work-info-title">Azure AD B2C with Spring and Angular</h2>
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
-                                            Front : Angular 15.
+                                            Front : Angular 15, Html, CSS.
                                         </li>
                                         <li class="work-info-list-item">
                                             Back : Spring boot service with Azure AD B2C config.
