update about me

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     <h2 class="section-title-about">&lt;About Me/&gt;</h2>
                    <p class="paragraph"> Greetings, thank you for visiting my website. I am Aminatou BARRY, I am a  <b>Developer</b> and  <b>DevOps Junior</b>.
                        I enjoy learning new things, my current challenge is to become a <b>DevOps Engineer</b>.
-                       I like to code, in my previous job at  <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
+                       I like to code, in my previous job at <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
                        I am also a mum, I like playing Mario Kart with my Kid and listening audiobooks, my current favorite is
-                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, I like seen good movie to movie theater,
+                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, I like to see good movie to movie theater,
                        and to eat a good meal at a restaurant with family or friends.
 
                    </p>
