--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <div class="w-container">
         <nav class="navbar  navbar-expand-md navbar-light w-nav ">
             <div class="container container-fluid ">
-                <button id="burg-icon" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="navbar-toggler-icon"  ></i>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="bar top-bar"></span>
+                    <span class="bar middle-bar"></span>
+                    <span class="bar bottom-bar"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbar-toggler">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <a class="navbar-brand w-nav-brand" href="#">
                         <img src="assets/img/logo.png" alt="logo" class="image">
                     </a>
@@ -55,6 +57,7 @@
         </nav>
 
     </div>
+
 
     <!-- =================== hero section ===================== -->
     <section class="hero align-items-stretch" id="hero">
