update skill section

--- a/index.html
+++ b/index.html
@@ -89,95 +89,170 @@
     <section id="about" class="section about-me space-b-section">
         <div class="container center">
             <h1 class="section-title"> Who Am I?</h1>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-6">
-                    <h2 class="section-title-about">&lt;About Me/&gt;</h2>
-                   <p class="paragraph"> Greetings, thank you for visiting my website. I am Aminatou BARRY, I am a  <b>Developer</b> and  <b>DevOps Junior</b>.
-                       I enjoy learning new things, my current challenge is to become a <b>DevOps Engineer</b>.
-                       I like to code, in my previous job at <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
-                       I am also a mum, I like playing Mario Kart with my Kid and listening audiobooks, my current favorite is
-                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, I like to see good movie to movie theater,
-                       and to eat a good meal at a restaurant with family or friends.
-
-                   </p>
-<!--                    <img class="" src="assets/img/hobby.png" alt="img_about"/>-->
+            <div class="row">
+                <!-- About Me Column -->
+                <div class="col-md-6 mb-4 about-me">
+                    <p class="paragraph">Hello again, thank you for being here!
+                        I’m Aminatou BARRY, a Developer and Junior DevOps professional with a passion for coding,
+                        in my previous role at Orange, my manager described me as having a "Good appetite for coding".
+                        My goal is to grow into a DevOps Engineer role, and I’m dedicated to building the skills to get there on e-learning platform and practicing.
+                        Right now, I am looking for a Developer position in DevOps environment. I am focused on deep understanding of CI/CD pipelines and expanding my expertise in cloud computing.</p>
+                    <p class="paragraph">Outside of tech, I'm a mom who loves racing in Mario Kart with my kid
+                        and diving into audiobooks. Right now, my favorite is "Fils des Brumes" by "Brandon Sanderson".
+                        Each week, I also make time for fitness, a good movie, and sharing meals with family or friends at my favorite restaurants.
+                        Thanks again for stopping by!</p>
                 </div>
-                <div class="col-12 col-md-3">
-                    <img class="img_about" src="assets/img/about.jpg" alt="img_about"/>
-                    <p class="paragraph ">Today I am <span class="change-text">Dev Lead at CNAV.</span> <br>
-                        I work on two projects <b>DSN</b> and <b>PASRAU</b>, my delivery are available <a href="https://www.net-entreprises.fr/">here</a>
-                        <a href="mailto:aminatou.barry97@gmail.com" class="  btn_about">Email me</a></p>
+
+                <!-- Profile Picture, Job Title, and Email Button Column -->
+                <div class="col-md-6 text-center">
+                    <img src="assets/img/about.jpg" alt="Profile Picture" class="profile-pic mb-3 img_about">
+                    <p class="paragraph-bol">Today, I am a Dev Lead at <strong>CNAV</strong>.
+                    I work on two major projects : <strong>NEODES</strong> and <strong>NEORAU</strong>. My project deliveries are available <a href="https://www.net-entreprises.fr/" target="_blank" rel="noopener noreferrer">here</a>.</p>
+                    <a href="mailto:your.email@example.com" class="btn email-btn">Email Me</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- =================== skills section ===================== -->
-    <div class="space-b-section">
-    <section id="skills" class="skills section section-bg ">
-        <div class="container container2">
-            <h1 class="section-title">Skills</h1>
-            <p class="paragraph">My skills continue to grow, I keep learning on platform like Udemy, ORSYS, OpenClassRoom.</p>
-            <div class="row skills-content">
-                <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up">
-                    <div class="progress">
-                        <span class="skill">HTML <i class="val">100%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-                        </div>
+    <div id="skills" class="section space-b-section">
+        <h1 class="section-title">Skills</h1>
+        <section class="skills-section">
+            <p class="skill-paragraph">
+            <div class="vibe-section">
+                <h2>My Current Vibe 🌟</h2>
+                <p class="interest-quote"> "Ensure you have a thorough understanding of the task and can perform it manually before initiating automation." 💬</p>
+                <!-- Emoji Row -->
+                <div class="row justify-content-center mt-4 emoji-list">
+                    <div class="col-4 col-md-2">
+                        <div>☁️</div>
+                        <p class="emoji-description">Cloud computing on AWS</p>
                     </div>
-                    <div class="progress">
-                        <span class="skill">CSS <i class="val">50%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50" style="width: 50%;"></div>
-                        </div>
+                    <div class="col-4 col-md-2">
+                        <div>🎓</div>
+                        <p class="emoji-description">E-learning on Udemy</p>
                     </div>
-                    <div class="progress">
-                        <span class="skill">JavaScript <i class="val">75%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
-                        </div>
+                    <div class="col-4 col-md-2">
+                        <div>🔧</div>
+                        <p class="emoji-description">DevOps Culture Benefits</p>
                     </div>
-                    <div class="progress">
-                        <span class="skill">Docker <i class="val">50%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50" style="width: 50%;"></div>
-                        </div>
+                    <div class="col-4 col-md-2">
+                        <div>🔄</div>
+                        <p class="emoji-description">CI CD Pipeline with jenkins</p>
                     </div>
+
                 </div>
-                <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-                    <div class="progress">
-                        <span class="skill">PHP/Synfony <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+            </div>
+            </p>
+        </section>
+
+        <div class="container">
+            <div class="card skills-card mx-auto shadow-lg"> <!-- Added shadow class here -->
+                <div class="row text-center">
+                    <!-- Front End Column -->
+                    <div class="col-md-4">
+                        <div>
+                            <i class="fas fa-code icon"></i>
+                            <h5>Front End</h5>
+                            <div class="container p-4 bg-white rounded ">
+
+
+                                <div class="d-flex flex-column mb-4">
+                                    <h5>Languages</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                </div>
+
+                                <!-- Design Tools Section -->
+                                <div class="d-flex flex-column">
+                                    <h5>Tools and Framework</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>ReactJS</li>
+                                        <li>Bootstrap</li>
+                                        <li>HighCharts</li>
+                                        <li>VS Code</li>
+                                        <li>WebStorm</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="progress">
-                        <span class="skill">JAVA /Spring Boot <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80" style="width: 80%;"></div>
+                    <!-- Back End Column -->
+                    <div class="col-md-4 skill-column">
+                        <div>
+                            <i class="fas fa-database icon"></i>
+                            <h5>Back End</h5>
+                            <div class="container p-4 bg-white rounded ">
+                                <!-- Introductory Text -->
+
+
+                                <div class="d-flex flex-column mb-4">
+                                    <h5>Languages</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>Java</li>
+                                        <li>PHP</li>
+                                    </ul>
+                                </div>
+
+                                <!-- Design Tools Section -->
+                                <div class="d-flex flex-column">
+                                    <h5>Framework</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>Spring Boot</li>
+                                        <li>NodeJS</li>
+                                        <li>Symfony</li>
+                                    </ul>
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <h5>DataBase</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>Mysql</li>
+                                        <li>PostgreSQL</li>
+                                        <li>MongoDB</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="progress">
-                        <span class="skill">Mysql/MongoDB <i class="val">90%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90" style="width: 90%;"></div>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <span class="skill">DevOps : Terraform, aws Services, Jenkins, Azure AD B2C <i class="val">35%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="50" style="width: 35%;"></div>
+                    <!-- DevOps & CICD Column -->
+                    <div class="col-md-4 skill-column">
+                        <div>
+                            <i class="fas fa-tools icon"></i>
+                            <h5>DevOps & CICD</h5>
+                            <div class="container p-4 bg-white rounded ">
+                                <div class="d-flex flex-column mb-4">
+                                    <h5>Stack</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>Git</li>
+                                        <li>Maven</li>
+                                        <li>jenkins</li>
+                                        <li>Docker</li>
+                                        <li>Kubernetes</li>
+                                        <li>Ansible</li>
+                                        <li>Terraform</li>
+                                    </ul>
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <h5>Cloud</h5>
+                                    <ul class="list-unstyled ps-3">
+                                        <li>AWS</li>
+
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
 
-        <!-- ================ Certifications =================-->
+    </div>
+        <!-- ================ E-learning and Certifications =================-->
         <div class="space-b-section container">
-        <h1 class="section-title">Certifications</h1>
+        <h1 class="section-title">E-learning and Certifications</h1>
         <div class="container-swp">
             <div class="card-container swiper">
                 <div class="card-content">
@@ -224,7 +299,7 @@
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
-                                <p class="card-description">Practice Devops CI/CD with Git, Jenkins, Ansible, Kubernetes </p>
+                                <p class="card-description">Practice Devops CI/CD with Git </p>
                                 <a href="assets/img/certifs/devops2.jpg" class="card-button"> view more</a>
                             </div>
                         </article>
@@ -235,7 +310,7 @@
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
-                                <p class="card-description">Practice Devops CI/CD with Jenkins, Maven, Gradle </p>
+                                <p class="card-description">Practice Devops CI/CD </p>
                                 <a href="assets/img/certifs/devops3.jpg" class="card-button"> view more</a>
                             </div>
                         </article>
@@ -246,7 +321,7 @@
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice with AWS</h3>
-                                <p class="card-description">Practice Devops CI/CD with AWS, Jenkins, Docker, Ansible Gradle </p>
+                                <p class="card-description">Practice Devops CI/CD </p>
                                 <a href="assets/img/certifs/devops4_aws.jpg" class="card-button"> view more</a>
                             </div>
                         </article>
@@ -269,7 +344,7 @@
     <section id="resume" class="space-b-section section resume">
         <div class="container container2">
 
-            <h1 class="section-title">Resume</h1>
+            <h1 class="section-title">Education Background and Resume</h1>
 
             <div class="row">
                 <div class="col-lg-6" data-aos="fade-up">
